corrected the background images for dark mode

--- a/src/components/Clock.css
+++ b/src/components/Clock.css
@@ -20,35 +20,27 @@
 }
 
 #container.dark {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/mobile/bg-image-nighttime.jpg");
-  background-repeat: no-repeat;
   background-size: cover;
 }
 
 @media (min-width: 768px) {
   #container {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/tablet/bg-image-daytime.jpg");
+    background-image: url("../assets/tablet/bg-image-daytime.jpg");
   }
 
-div .dark {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/tablet/bg-image-nighttime.jpg");
-  
+#container.dark {
+  background-image: url("../assets/tablet/bg-image-nighttime.jpg");
 }
 
 }
 
 @media (min-width: 1024px) {
   #container {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/desktop/bg-image-daytime.jpg");
-    background-size: cover;
+    background-image: url("../assets/desktop/bg-image-daytime.jpg");
   }
 
-div .dark {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../assets/desktop/bg-image-nighttime.jpg");
+#container.dark {
+  background-image: url("../assets/desktop/bg-image-nighttime.jpg");
 }
 }
